<resources>
    <string name="app_name">HealthEase_Part_2</string>
    <string name="healthease">HealthEase</string>
    <string name="personal_healthcare_management">Personal Healthcare Management</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="register_for_healthease">Register for HealthEase</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
</resources>